--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -387,7 +387,7 @@ The \gls{lsnd} experiment involved a close to 800 MeV proton beam which produced
 \begin{figure}[h!]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/LSND_excess.png}
-    \caption[LSND excsess.]{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$) \cite{LSND_excess}.}
+    \caption[LSND excess.]{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$) \cite{LSND_excess}.}
     \label{fig:LSND excess}
 \end{figure}
 \newpage
